# data-analysis-chat-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/golden_trios/: trio_0001.json  trio_0002.json  trio_0003.json  trio_0004.json  trio_0005.json  trio_0006.json  trio_0007.json  trio_0008.json  trio_0009.json  trio_0010.json  trio_0011.json  trio_0012.json
data/personas/: concise_exec.yaml  data_storyteller.yaml
data/seed_reports/: a1_acme_review.json  a2_globex_performance.json  a3_top_products.json  b1_acme_pipeline.json
docs/: HLD.md  architecture.md
scripts/: check_access.py  ingest_golden.py
src/assistant/: __init__.py  cli.py  config.py  resilience.py
src/assistant/agent/: __init__.py  dependencies.py  graph.py  state.py
src/assistant/bigquery/: __init__.py  runner.py
src/assistant/eval/: __init__.py  __main__.py  cases.py  correctness.py  harness.py  judge.py
src/assistant/golden/: __init__.py  index.py  models.py  retriever.py  store.py
src/assistant/llm/: __init__.py  client.py  embeddings.py
src/assistant/memory/: __init__.py  feedback.py  profiles.py
src/assistant/safety/: pii.py  (+3 more)
tests/eval/: golden_set.json
tests/unit/: test_compound_propagation.py  test_contextualize_safety.py  test_eval_correctness.py  test_eval_harness.py  test_input_guard.py  test_learning.py  test_llm_client.py  test_observability.py  test_pii.py  test_profiles.py  test_reports_nodes.py  test_reports_store.py  test_resilience.py  test_self_correction.py  test_sql_validator.py
(+29 files in other folders)
